# portoauto

./: .gitignore  LICENSE  README.md  config.cfg  processing_log.jsonl  pyproject.toml  readme.md
dags/: porto_auto_main_dag.py
dags/scripts/: get_demonstrativo_caixa.py  get_docs_fundo.py  get_extrato_bancario.py  get_recebiveis_dashboard.py  get_recebiveis_relatorio.py
dashboard_fct/: analysis_logic.py  app.py  cache.py
dashboard_fct/data_files/: feriados_nacionais.xls
notebooks/: felipe-FCT_dianostico1.ipynb  felipe-Untitled.ipynb  novo-felipe-FCT_dianostico1.ipynb  ultimo-novo-felipe-FCT_dianostico1.ipynb
pram_utils/: setup.py
relatorios_empresa/: gerador_relatorio.py  modulos_analise.py  pyproject.toml  test_runner.py
results/sql/: resumo_entes_cumulativo.db
src/fct_consig/: analisando_metricas.py  liquidez.py  machine_learning.py  metricas.ipynb  metricas.py  metricas_new.py  resumo.py  temp_simples_resumo.py  vencidos.py
src/macro_downloader/: README.md  TRATAR_INICIAIS_arquivos_cjson.py  TRATAR_dados_adicionais.py  __init__.py  baixar_dados.py  baixar_novos_dados.py  core.py  downloader.py  explorar_dados_adicionais.py  ler_arquivos_iniciais.py  macro_downloader.py  pyproject.toml  validar_dados_adicionais.py  verifier.py
src/originadores/: machine_learning.ipynb  machine_learning.py  machine_learning_v2.ipynb  metricas_originadores_latest_varias_cols.py  metricas_originadores_latest_varias_cols_code_rabbit copy.py  notebook_originadora.ipynb  notebook_originadora_v1.02.ipynb  testes_machine_learning.ipynb
src/vortx_estoques/: lamina.py  lan.py  (+17 more)
(+88 files in other folders)
