[project]
name = "portoauto_data"
version = "0.1.0"
description = "Pacote para carregar dados macroeconômicos para o projeto Porto Real."
dependencies = [
    "pandas",
    "requests",
    "beautifulsoup4",
    "openpyxl",      # Para ler arquivos .xlsx
    "odfpy"          # Para ler arquivos .ods
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"