
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "relatorios_empresa"
version = "0.1.0"
authors = [
  { name="Seu Nome", email="seu@email.com" },
]
description = "Um pacote para gerar relatórios de análise de carteira."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# 
dependencies = [
    "pandas",
    "numpy",
    "openpyxl", #  pandas ler/escrever .xlsx
]